--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-11 17:36+0200\n"
-"PO-Revision-Date: 2013-03-08 21:26+0200\n"
+"PO-Revision-Date: 2013-03-11 21:31+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -6509,7 +6509,7 @@ msgid ""
 "Available beds for the selected dates. Price per person (not per room). 1 "
 "person per bed maximum."
 msgstr ""
-"Camas disponibles para las fechas selecionadas.  Precio por persona(no por "
+"Camas disponibles para las fechas seleccionadas.  Precio por persona(no por "
 "habitación). Máximo 1 persona por cama."
 
 #: ../code/application/views/helpfile/pofields.php:431
@@ -6615,7 +6615,7 @@ msgid ""
 "Sorry but there are no availabilities for the selected dates. Next available "
 "dates are:"
 msgstr ""
-"Disculpe, no tenemos disponibilidad para las fechas selecionadas.  Las "
+"Disculpe, no tenemos disponibilidad para las fechas seleccionadas.  Las "
 "próximas fechas disponibles son:"
 
 #: ../code/application/views/helpfile/pofields.php:459
@@ -7168,7 +7168,7 @@ msgstr "Comparar"
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr ""
+msgstr " de "
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
@@ -7193,14 +7193,14 @@ msgid "Quick Compare"
 msgstr "Comparación Rápida"
 
 #: ../code/application/views/helpfile/pofields.php:635
-#, fuzzy, php-format
+#, php-format
 msgid "Dorms From"
-msgstr "Dormitorios desde %d"
+msgstr "Dormitorios desde"
 
 #: ../code/application/views/helpfile/pofields.php:636
-#, fuzzy, php-format
+#, php-format
 msgid "Privates From"
-msgstr "Habitaciones Privadas desde %d"
+msgstr "Habitaciones Privadas desde"
 
 #: ../code/application/views/helpfile/pofields.php:637
 #, php-format
@@ -7223,7 +7223,7 @@ msgid "Result"
 msgstr "Resultado"
 
 #: ../code/application/views/helpfile/pofields.php:647
-#, fuzzy, php-format
+#, php-format
 msgid "Only 5 properties can be compared"
 msgstr "Solo se pueden comparar 5 alojamientos"
 
@@ -7265,9 +7265,9 @@ msgid "Restore Everything"
 msgstr "Restaurar todo"
 
 #: ../code/application/views/helpfile/pofields.php:656
-#, fuzzy, php-format
+#, php-format
 msgid "Compare (%d out of 5)"
-msgstr "Compara (%d de %d)"
+msgstr "Compara (%d de 5)"
 
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
@@ -7413,14 +7413,14 @@ msgstr ""
 "nuestra Política de Cookies y del uso de la tecnología de cookies. Saber más"
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "New Search"
-msgstr "Buscar ahora"
+msgstr "Nueva Búsqueda"
 
 #: ../code/application/views/helpfile/pofields.php:690
-#, fuzzy, php-format
+#, php-format
 msgid "Search"
-msgstr "Buscar ahora"
+msgstr "Buscar"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/mustache/property_list.php:264
