--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-11 17:36+0200\n"
-"PO-Revision-Date: 2013-03-08 21:27+0200\n"
+"PO-Revision-Date: 2013-03-11 21:30+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -953,7 +953,7 @@ msgstr ""
 "ofrece reservas de última hora a muy bajo costo y alojamientos en ciudades "
 "como París, Francia, Londres, Inglaterra, Barcelona, España, Nueva York, "
 "Estados Unidos, Roma, Italia, Países Bajos, Amsterdam, Dublín, Madrid, "
-"España, República Checa, Praga ..."
+"España, República Checa, Praga …"
 
 #: ../code/application/views/includes/footer.php:105
 msgid "Hostelworld customer review"
@@ -1140,7 +1140,7 @@ msgstr "Buscando %s"
 
 #: ../code/application/views/includes/header.php:925
 msgid "Please wait while we are finding the best deals for you ..."
-msgstr "Por favor, espere mientras le encontramos las mejores ofertas..."
+msgstr "Por favor, espere mientras le encontramos las mejores ofertas…"
 
 #: ../code/application/views/includes/header.php:926
 #: ../code/application/views/helpfile/pofields.php:629
@@ -3708,7 +3708,7 @@ msgstr ""
 "reserva. La cantidad restante (90%%) se abona a su llegada. Una vez hecha su "
 "reserva, recibirá un correo electrónico de la propiedad incluyendo "
 "confirmación de reserva y datos de la propiedad (correo electrónico, "
-"dirección, número de teléfono ...)."
+"dirección, número de teléfono …)."
 
 #: ../code/application/views/hw/booking_avail_view.php:554
 #: ../code/application/views/hb/booking_avail_view.php:457
@@ -4958,7 +4958,7 @@ msgstr "Gracias"
 
 #: ../code/application/views/helpfile/pofields.php:54
 msgid "Want to receive up to 60 minutes of free calling from Skype ?"
-msgstr "Le gustaria recibir gratis hasta 60 minutos en llamadas en Skype?"
+msgstr "Le gustaría recibir gratis hasta 60 minutos en llamadas en Skype?"
 
 #: ../code/application/views/helpfile/pofields.php:55
 msgid "Then Join us on Facebook! This is that simple."
@@ -5004,7 +5004,7 @@ msgid ""
 "availability to any person, at any time, for any or no reason, and without "
 "prior notice or liability to participants."
 msgstr ""
-"%s se reserva el derecho, a su sola discreción, de modificar o descontinuar "
+"%s se reserva el derecho, a su sola discreción, de modificar o descontentar "
 "el \"hasta 60 minutos gratis de crédito de Skype\" oferta o para restringir "
 "su disponibilidad a cualquier "
 
@@ -5056,7 +5056,7 @@ msgid ""
 "To register your property or change the desciption of your property, please "
 "fill up the form below."
 msgstr ""
-"To register your property or change the desciption of your property, please "
+"To register your property or change the description of your property, please "
 "fill up the form below."
 
 #: ../code/application/views/helpfile/pofields.php:69
@@ -5530,7 +5530,7 @@ msgstr[1] "Esta propiedad requiere una estadia minima de %d noches"
 #: ../code/application/views/helpfile/pofields.php:191
 #, php-format
 msgid "This property requires a minimum stay of %d nights"
-msgstr "Esta propiedad requiere una estadia minima de %d noches"
+msgstr "Esta propiedad requiere una estadía mínima de %d noches"
 
 #: ../code/application/views/helpfile/pofields.php:192
 #, php-format
@@ -5595,7 +5595,7 @@ msgstr "Transacciones 100%% seguras y encriptadas "
 #: ../code/application/views/helpfile/pofields.php:203
 #, php-format
 msgid "This property has a minimum stay of %d nights"
-msgstr "Esta propiedad requiere una estadia minima de %d noche"
+msgstr "Esta propiedad requiere una estadía mínima de %d noche"
 
 #: ../code/application/views/helpfile/pofields.php:206
 #, php-format
@@ -5727,7 +5727,7 @@ msgstr "Cambiar fechas"
 #: ../code/application/views/helpfile/pofields.php:260
 #, php-format
 msgid "This property does not offer any dorms."
-msgstr "Esta propiedad no ofrece ningún tipo de habitacioines comunes."
+msgstr "Esta propiedad no ofrece ningún tipo de habitaciones comunes."
 
 #: ../code/application/views/helpfile/pofields.php:261
 #, php-format
@@ -6498,7 +6498,7 @@ msgstr "Máximo número de huéspedes por dormitorio."
 #: ../code/application/views/helpfile/pofields.php:429
 #, php-format
 msgid "Maximum number of guest per room."
-msgstr "Máximo número de huéspedes para est habitación."
+msgstr "Máximo número de huéspedes para set habitación."
 
 #: ../code/application/views/helpfile/pofields.php:430
 #, php-format
@@ -7167,7 +7167,7 @@ msgstr "Comparar"
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr ""
+msgstr " de "
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
@@ -7197,9 +7197,9 @@ msgid "Dorms From"
 msgstr "Dormitorios desde"
 
 #: ../code/application/views/helpfile/pofields.php:636
-#, fuzzy, php-format
+#, php-format
 msgid "Privates From"
-msgstr "Habitaciones Privadas desde %d"
+msgstr "Habitaciones Privadas desde"
 
 #: ../code/application/views/helpfile/pofields.php:637
 #, php-format
@@ -7222,7 +7222,7 @@ msgid "Result"
 msgstr "Resultado"
 
 #: ../code/application/views/helpfile/pofields.php:647
-#, fuzzy, php-format
+#, php-format
 msgid "Only 5 properties can be compared"
 msgstr "Solo se pueden comparar 5 alojamientos"
 
@@ -7264,9 +7264,9 @@ msgid "Restore Everything"
 msgstr "Restaurar todo"
 
 #: ../code/application/views/helpfile/pofields.php:656
-#, fuzzy, php-format
+#, php-format
 msgid "Compare (%d out of 5)"
-msgstr "Compara (%d de %d)"
+msgstr "Compara (%d de 5)"
 
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
@@ -7413,14 +7413,14 @@ msgstr ""
 "nuestra Política de Cookies y del uso de la tecnología de cookies. Saber más"
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "New Search"
-msgstr "Buscar ahora"
+msgstr "Nueva Búsqueda"
 
 #: ../code/application/views/helpfile/pofields.php:690
-#, fuzzy, php-format
+#, php-format
 msgid "Search"
-msgstr "Buscar ahora"
+msgstr "Buscar"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/mustache/property_list.php:264
