--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -7163,7 +7163,7 @@ msgstr "Comparer"
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr ""
+msgstr " de "
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
@@ -7218,7 +7218,7 @@ msgid "Result"
 msgstr "Résultats"
 
 #: ../code/application/views/helpfile/pofields.php:647
-#, fuzzy, php-format
+#, php-format
 msgid "Only 5 properties can be compared"
 msgstr "Seulement 5 propriétés peuvent être comparées"
 
@@ -7260,9 +7260,9 @@ msgid "Restore Everything"
 msgstr "Tout remettre a zéro"
 
 #: ../code/application/views/helpfile/pofields.php:656
-#, fuzzy, php-format
+#, php-format
 msgid "Compare (%d out of 5)"
-msgstr "Comparer (%d sur %d)"
+msgstr "Comparer (%d sur 5)"
 
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
@@ -7411,14 +7411,14 @@ msgstr ""
 "savoir plus"
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "New Search"
-msgstr "Recherchez"
+msgstr "Nouvelle Recherche"
 
 #: ../code/application/views/helpfile/pofields.php:690
-#, fuzzy, php-format
+#, php-format
 msgid "Search"
-msgstr "Recherchez"
+msgstr "Recherche"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/mustache/property_list.php:264
