--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-11 17:36+0200\n"
-"PO-Revision-Date: 2013-03-06 22:09+0200\n"
+"PO-Revision-Date: 2013-03-11 21:38+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3332,7 +3331,7 @@ msgstr "Хостелы и дешевое проживание - %s"
 #: ../code/application/views/city_view.php:189
 #: ../code/application/views/city_view.php:337
 msgid "of"
-msgstr ""
+msgstr " из "
 
 #: ../code/application/views/city_view.php:191
 #: ../code/application/views/city_view.php:339
@@ -7115,7 +7114,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr ""
+msgstr " из "
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
@@ -7352,9 +7351,9 @@ msgid ""
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "New Search"
-msgstr "Поиск"
+msgstr "Новый поиск"
 
 #: ../code/application/views/helpfile/pofields.php:690
 #, fuzzy, php-format
@@ -7364,9 +7363,9 @@ msgstr "Поиск"
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/mustache/property_list.php:264
 #: ../code/application/views/mustache/property_list.php:275
-#, fuzzy, php-format
+#, php-format
 msgid "Select"
-msgstr "Выберите карту"
+msgstr "Выберите"
 
 #: ../code/application/views/helpfile/pofields.php:692
 #, php-format
