--- a/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang_sm.po
+++ b/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang_sm.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-11 17:36+0200\n"
-"PO-Revision-Date: 2013-03-06 21:33+0200\n"
+"PO-Revision-Date: 2013-03-11 20:54+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3331,7 +3330,7 @@ msgstr "Lista Schronisk Młodzieżowych - %s"
 #: ../code/application/views/city_view.php:189
 #: ../code/application/views/city_view.php:337
 msgid "of"
-msgstr ""
+msgstr "ze"
 
 #: ../code/application/views/city_view.php:191
 #: ../code/application/views/city_view.php:339
@@ -7101,7 +7100,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr ""
+msgstr "ze"
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
@@ -7338,26 +7337,26 @@ msgid ""
 msgstr ""
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "New Search"
-msgstr "Szukaj teraz"
+msgstr "Nowe wyszukiwanie"
 
 #: ../code/application/views/helpfile/pofields.php:690
-#, fuzzy, php-format
+#, php-format
 msgid "Search"
-msgstr "Szukaj teraz"
+msgstr "Szukaj"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/mustache/property_list.php:264
 #: ../code/application/views/mustache/property_list.php:275
-#, fuzzy, php-format
+#, php-format
 msgid "Select"
-msgstr "Wybierz kartę"
+msgstr "Wybierz"
 
 #: ../code/application/views/helpfile/pofields.php:692
 #, php-format
 msgid "last %d"
-msgstr ""
+msgstr "ostatnich %d"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
