--- a/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/pl_PL/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-11 17:36+0200\n"
-"PO-Revision-Date: 2013-03-11 20:54+0200\n"
+"PO-Revision-Date: 2013-03-12 21:06+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -664,7 +664,7 @@ msgstr "Szukaj teraz"
 #: ../code/application/views/group_request.php:63
 #: ../code/application/views/group_request.php:65
 msgid "Chargement..."
-msgstr "Trwa ładowanie ..."
+msgstr "Trwa ładowanie …"
 
 #: ../code/application/views/includes/side_search_box.php:37
 #: ../code/application/views/includes/side_search_box.php:170
@@ -1131,7 +1131,7 @@ msgstr "Wyszukiwanie %s"
 
 #: ../code/application/views/includes/header.php:925
 msgid "Please wait while we are finding the best deals for you ..."
-msgstr "Prosimy czekać, szukamy dla Ciebie najlepszych ofert... "
+msgstr "Prosimy czekać, szukamy dla Ciebie najlepszych ofert… "
 
 #: ../code/application/views/includes/header.php:926
 #: ../code/application/views/helpfile/pofields.php:629
@@ -3166,7 +3166,6 @@ msgstr ""
 "blisko do wszystkich atrakcji. - %s."
 
 #: ../code/application/views/error400.php:10
-#, fuzzy
 msgid "Erreur 400 - Page Introuvable"
 msgstr "Błąd 404 - Nie znaleziono strony"
 
@@ -3225,7 +3224,7 @@ msgstr "Przedział cenowy:"
 #: ../code/application/views/helpfile/pofields.php:655
 #, php-format
 msgid "Rating"
-msgstr "Recenzje"
+msgstr "Ocena"
 
 #: ../code/application/views/city_view.php:43
 #: ../code/application/views/helpfile/pofields.php:458
@@ -3275,7 +3274,7 @@ msgstr "Camping"
 #: ../code/application/views/helpfile/pofields.php:657
 #, php-format
 msgid "Facilities"
-msgstr "Udogodnienia"
+msgstr "Media"
 
 #: ../code/application/views/city_view.php:82
 #: ../code/application/views/city_view.php:258
@@ -3324,14 +3323,14 @@ msgstr "Lista tanich hosteli - %s"
 #: ../code/application/views/city_view.php:189
 #: ../code/application/views/city_view.php:337
 msgid "of"
-msgstr "ze"
+msgstr " ze "
 
 #: ../code/application/views/city_view.php:191
 #: ../code/application/views/city_view.php:339
 #: ../code/application/views/helpfile/pofields.php:645
 #, php-format
 msgid "Results"
-msgstr ""
+msgstr "Wyniki"
 
 #: ../code/application/views/city_view.php:203
 #: ../code/application/views/hw/booking_end_view.php:35
@@ -7012,69 +7011,69 @@ msgid "Next available property"
 msgstr "Następna dostępna kwatera"
 
 #: ../code/application/views/helpfile/pofields.php:610
-#, fuzzy, php-format
+#, php-format
 msgid "Group Type:"
-msgstr "Grupy"
+msgstr "Typ Grupy:"
 
 #: ../code/application/views/helpfile/pofields.php:611
-#, fuzzy, php-format
+#, php-format
 msgid "Age Ranges:"
-msgstr "Przedział cenowy:"
+msgstr "Przedział wiekowy:"
 
 #: ../code/application/views/helpfile/pofields.php:612
 #, php-format
 msgid "Choose one..."
-msgstr ""
+msgstr "Wybierz jeden…"
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
 msgid "Holidays with friends"
-msgstr ""
+msgstr "Wakacje z przyjaciółmi"
 
 #: ../code/application/views/helpfile/pofields.php:614
 #, php-format
 msgid "Junior/Primary school"
-msgstr ""
+msgstr "Małe dzieci/Szkoła Podstawowa"
 
 #: ../code/application/views/helpfile/pofields.php:615
 #, php-format
 msgid "High/Secondary school"
-msgstr ""
+msgstr "Gimnazjum/Szkoła Średnia"
 
 #: ../code/application/views/helpfile/pofields.php:616
 #, php-format
 msgid "College / University"
-msgstr ""
+msgstr "College/Uniwersytet"
 
 #: ../code/application/views/helpfile/pofields.php:617
-#, fuzzy, php-format
+#, php-format
 msgid "Business trip"
-msgstr "Spotkania biznesowe"
+msgstr "Wyjazd służbowy"
 
 #: ../code/application/views/helpfile/pofields.php:618
 #, php-format
 msgid "Stag/Hen/Bachelor party"
-msgstr ""
+msgstr "Wieczór Panieński/Kawalerski"
 
 #: ../code/application/views/helpfile/pofields.php:619
-#, fuzzy, php-format
+#, php-format
 msgid "Sports group"
-msgstr "Grupy sportowe"
+msgstr "Grupa sportowa"
 
 #: ../code/application/views/helpfile/pofields.php:620
 #, php-format
 msgid "Cultural group"
-msgstr ""
+msgstr "Grupa kulturowa"
 
 #: ../code/application/views/helpfile/pofields.php:621
 #, php-format
 msgid "Please specify a type of group."
-msgstr ""
+msgstr "Proszę sprecyzować typ grupy."
 
 #: ../code/application/views/helpfile/pofields.php:622
-#, fuzzy, php-format
+#, php-format
 msgid "Please specify an age range for your group."
-msgstr "Znaleźliśmy wspaniałą ofertę dla Twojej grupy."
+msgstr "Proszę sprecyzować przedział wiekowy Twojej grupy."
 
 #: ../code/application/views/helpfile/pofields.php:623
 #, php-format
@@ -7082,245 +7081,245 @@ msgid "Map"
 msgstr "Mapa"
 
 #: ../code/application/views/helpfile/pofields.php:625
-#, fuzzy, php-format
+#, php-format
 msgid "Reviews"
-msgstr "Ocena"
+msgstr "Przeglądy"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, php-format
 msgid "Compare"
-msgstr ""
+msgstr "Porównaj"
 
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr "ze"
+msgstr " ze "
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
 msgid "Please see selected properties to compare on top of the page."
-msgstr ""
+msgstr "Zapoznaj się z wybranymi kwaterami, aby porównać je na górze strony."
 
 #: ../code/application/views/helpfile/pofields.php:631
-#, fuzzy, php-format
+#, php-format
 msgid "Not available"
-msgstr "Brak dostępnych dormitoriów"
+msgstr "Niedostępne"
 
 #: ../code/application/views/helpfile/pofields.php:633
-#, fuzzy, php-format
+#, php-format
 msgid "Print"
 msgstr "Drukuj"
 
 #: ../code/application/views/helpfile/pofields.php:634
 #, php-format
 msgid "Quick Compare"
-msgstr ""
+msgstr "Szybkie Porównanie"
 
 #: ../code/application/views/helpfile/pofields.php:635
-#, fuzzy, php-format
+#, php-format
 msgid "Dorms From"
-msgstr "Dormitoria %s"
+msgstr "Akademiki od"
 
 #: ../code/application/views/helpfile/pofields.php:636
-#, fuzzy, php-format
+#, php-format
 msgid "Privates From"
-msgstr "Pokoje prywatne"
+msgstr "Prywatne Pokoje od "
 
 #: ../code/application/views/helpfile/pofields.php:637
-#, fuzzy, php-format
+#, php-format
 msgid "Rating Overall"
-msgstr "Ogólnie"
+msgstr "Ocena Całościowa "
 
 #: ../code/application/views/helpfile/pofields.php:640
 #, php-format
 msgid "Site"
-msgstr ""
+msgstr "Budynek"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Services"
-msgstr ""
+msgstr "Usługi"
 
 #: ../code/application/views/helpfile/pofields.php:646
 #, php-format
 msgid "Result"
-msgstr ""
+msgstr "Wynik"
 
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Only 5 properties can be compared"
-msgstr ""
+msgstr "Można porównać tylko 5 kwater"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
 msgid "Please remove a property from list."
-msgstr ""
+msgstr "Usuń kwaterę z listy."
 
 #: ../code/application/views/helpfile/pofields.php:649
-#, fuzzy, php-format
+#, php-format
 msgid "Quick Compare (5 properties maximum)"
-msgstr "Porównaj wszystkie hostele w %s"
+msgstr "Szybkie Porównanie (maksymalnie 5 kwater)"
 
 #: ../code/application/views/helpfile/pofields.php:650
-#, fuzzy, php-format
+#, php-format
 msgid "Remove All"
-msgstr "usuń"
+msgstr "Usuń Wszystko"
 
 #: ../code/application/views/helpfile/pofields.php:651
 #, php-format
 msgid "Please see selected properties to compare on top of this page."
-msgstr ""
+msgstr "Zapoznaj się z wybranymi kwaterami, aby porównać je na górze strony."
 
 #: ../code/application/views/helpfile/pofields.php:652
 #, php-format
 msgid "%d Results"
-msgstr ""
+msgstr "%d Wyników"
 
 #: ../code/application/views/helpfile/pofields.php:653
-#, fuzzy, php-format
+#, php-format
 msgid "Home"
-msgstr "Strona główna"
+msgstr "Home"
 
 #: ../code/application/views/helpfile/pofields.php:654
 #, php-format
 msgid "Restore Everything"
-msgstr ""
+msgstr "Odnów Wszystko"
 
 #: ../code/application/views/helpfile/pofields.php:656
 #, php-format
 msgid "Compare (%d out of 5)"
-msgstr ""
+msgstr "Porównaj (%d z 5)"
 
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "Pokarz Więcej "
 
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Show Less"
-msgstr ""
+msgstr "Pokarz Mniej"
 
 #: ../code/application/views/helpfile/pofields.php:660
 #, php-format
 msgid "Not enough parameters"
-msgstr ""
+msgstr "Za mało parametrów"
 
 #: ../code/application/views/helpfile/pofields.php:661
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the email"
-msgstr "Drukuj mapę"
+msgstr "Wpisz email"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #, php-format
 msgid "Invalid email recipient"
-msgstr ""
+msgstr "Adres email nieprawidłowy"
 
 #: ../code/application/views/helpfile/pofields.php:663
 #, php-format
 msgid "Fill in the subject"
-msgstr ""
+msgstr "Wpisz temat"
 
 #: ../code/application/views/helpfile/pofields.php:664
 #, php-format
 msgid "Fill in the message"
-msgstr ""
+msgstr "Wpisz wiadomość"
 
 #: ../code/application/views/helpfile/pofields.php:665
 #, php-format
 msgid "Fill in the \"From\" name"
-msgstr ""
+msgstr "Wypełnij pole \"Od\""
 
 #: ../code/application/views/helpfile/pofields.php:666
 #, php-format
 msgid "Fill in the \"From\" email"
-msgstr ""
+msgstr "Wypełnij pole email \"Od\""
 
 #: ../code/application/views/helpfile/pofields.php:667
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid \"From\" email"
-msgstr "Nieprawidłowy format"
+msgstr "Nieprawidłowy email \"Od\""
 
 #: ../code/application/views/helpfile/pofields.php:668
-#, fuzzy, php-format
+#, php-format
 msgid "Your message has been sent to %s"
-msgstr "E-mail został wysłany na twój adres"
+msgstr "Twoja wiadomość została wysłana do %s"
 
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "Od:"
 
 #: ../code/application/views/helpfile/pofields.php:670
-#, fuzzy, php-format
+#, php-format
 msgid "To:"
-msgstr "Razem:"
+msgstr "Do:"
 
 #: ../code/application/views/helpfile/pofields.php:671
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "Temat:"
 
 #: ../code/application/views/helpfile/pofields.php:672
-#, fuzzy, php-format
+#, php-format
 msgid "Message:"
-msgstr "Wiadomość"
+msgstr "Wiadomość:"
 
 #: ../code/application/views/helpfile/pofields.php:673
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "Wyślij kolejną wiadomość"
 
 #: ../code/application/views/helpfile/pofields.php:675
 #, php-format
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
-msgstr ""
+msgstr "Wyślij tą stronę do znajomego lub do siebie w celu przypomnienia."
 
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
 msgid "To (email)"
-msgstr ""
+msgstr "Do (email)"
 
 #: ../code/application/views/helpfile/pofields.php:677
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "Temat"
 
 #: ../code/application/views/helpfile/pofields.php:679
-#, fuzzy, php-format
+#, php-format
 msgid "From (name)"
-msgstr "Imię"
+msgstr "Od (imię)"
 
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "Od (email)"
 
 #: ../code/application/views/helpfile/pofields.php:681
 #, php-format
 msgid "Yes, I want to subscribe to the newsletter."
-msgstr ""
+msgstr "Tak, chcę otrzymywać newsletter. "
 
 #: ../code/application/views/helpfile/pofields.php:682
-#, fuzzy, php-format
+#, php-format
 msgid "Send email"
-msgstr "Wyślij e-mail"
+msgstr "Wyślij email"
 
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "Podziel się PDFem"
 
 #: ../code/application/views/helpfile/pofields.php:685
 #, php-format
 msgid "Want to send a PDF copy of this page or quote by email?"
-msgstr ""
+msgstr "Chcesz wysłać PDF tej strony lub link emailem?"
 
 #: ../code/application/views/helpfile/pofields.php:686
-#, fuzzy, php-format
+#, php-format
 msgid "Send PDF"
-msgstr "Wyślij"
+msgstr "Wyślij PDF"
 
 #: ../code/application/views/helpfile/pofields.php:688
 #, php-format
@@ -7329,6 +7328,10 @@ msgid ""
 "continuing to browse our site you are agreeing to our Cookies Policy and use "
 "of cookies technology. Find out more"
 msgstr ""
+"Używamy plików typu cookies, aby zapewnić Ci maksymalny komfort "
+"podczas korzystania z naszej strony. Kontynuując przeglądanie, zgadzasz "
+"się z naszą Polityką dot. Plików Cookies oraz na użycie technologii cookies. "
+"Dowiedz się więcej  "
 
 #: ../code/application/views/helpfile/pofields.php:689
 #, php-format
