--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-11 17:36+0200\n"
-"PO-Revision-Date: 2013-03-11 21:02+0200\n"
+"PO-Revision-Date: 2013-03-13 23:05+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -585,9 +585,9 @@ msgstr "ガイド"
 
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #: ../code/application/views/helpfile/pofields.php:687
-#, fuzzy, php-format
+#, php-format
 msgid "Recently Viewed"
-msgstr "最近のホステルのアクセス"
+msgstr "最近閲覧されたもの"
 
 #: ../code/application/views/includes/top_filter.php:24
 #: ../code/application/views/helpfile/pofields.php:282
@@ -1136,7 +1136,7 @@ msgstr "お得な情報を検索してますので、それまでお待ちくだ
 #: ../code/application/views/helpfile/pofields.php:629
 #, php-format
 msgid "Loading"
-msgstr "ローディング"
+msgstr "ロード中"
 
 #: ../code/application/views/includes/help.php:3
 #: ../code/application/views/restricted/user_view.php:21
@@ -3105,7 +3105,6 @@ msgstr ""
 "や駅、空港などすべてのアロラクションは%sに近いです。"
 
 #: ../code/application/views/error400.php:10
-#, fuzzy
 msgid "Erreur 400 - Page Introuvable"
 msgstr "404  にエラーが発生　ページは見つかりません"
 
@@ -3164,7 +3163,7 @@ msgstr "価格帯："
 #: ../code/application/views/helpfile/pofields.php:655
 #, php-format
 msgid "Rating"
-msgstr "レーティング"
+msgstr "評価"
 
 #: ../code/application/views/city_view.php:43
 #: ../code/application/views/helpfile/pofields.php:458
@@ -3886,13 +3885,13 @@ msgstr "スタッフ"
 #: ../code/application/views/helpfile/pofields.php:630
 #, php-format
 msgid "Location"
-msgstr "位置"
+msgstr "ロケーション"
 
 #: ../code/application/views/hb/hostel_view.php:53
 #: ../code/application/views/helpfile/pofields.php:641
 #, php-format
 msgid "Cleanliness"
-msgstr "清潔感"
+msgstr "清潔さ"
 
 #: ../code/application/views/hb/hostel_view.php:59
 #: ../code/application/views/hb/hostel_view.php:452
@@ -3902,13 +3901,13 @@ msgstr "清潔感"
 #: ../code/application/views/mustache/property_list.php:244
 #, php-format
 msgid "Safety"
-msgstr "安全性"
+msgstr "セキュリティー"
 
 #: ../code/application/views/hb/hostel_view.php:62
 #: ../code/application/views/helpfile/pofields.php:644
 #, php-format
 msgid "Value"
-msgstr "値段"
+msgstr "価格"
 
 #: ../code/application/views/hb/hostel_view.php:72
 msgid "N/A"
@@ -5000,7 +4999,7 @@ msgstr "Eメール"
 #: ../code/application/views/helpfile/pofields.php:678
 #, php-format
 msgid "Message"
-msgstr "メッセージ"
+msgstr "本文"
 
 #: ../code/application/views/helpfile/pofields.php:86
 #: ../code/application/views/helpfile/pofields.php:255
@@ -6465,7 +6464,7 @@ msgstr "全年齢対応"
 #: ../code/application/views/mustache/property_list.php:29
 #, php-format
 msgid "See Map"
-msgstr "地図をごらんください"
+msgstr "地図をご覧下さい。"
 
 #: ../code/application/views/helpfile/pofields.php:461
 #, php-format
@@ -6912,69 +6911,69 @@ msgid "Next available property"
 msgstr "次にご予約可能な施設"
 
 #: ../code/application/views/helpfile/pofields.php:610
-#, fuzzy, php-format
+#, php-format
 msgid "Group Type:"
-msgstr "グループ"
+msgstr "団体タイプ"
 
 #: ../code/application/views/helpfile/pofields.php:611
-#, fuzzy, php-format
+#, php-format
 msgid "Age Ranges:"
-msgstr "価格帯："
+msgstr "年齢層"
 
 #: ../code/application/views/helpfile/pofields.php:612
 #, php-format
 msgid "Choose one..."
-msgstr ""
+msgstr "１つお選びください。"
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
 msgid "Holidays with friends"
-msgstr ""
+msgstr "友達との休暇"
 
 #: ../code/application/views/helpfile/pofields.php:614
 #, php-format
 msgid "Junior/Primary school"
-msgstr ""
+msgstr "中学校"
 
 #: ../code/application/views/helpfile/pofields.php:615
 #, php-format
 msgid "High/Secondary school"
-msgstr ""
+msgstr "高校"
 
 #: ../code/application/views/helpfile/pofields.php:616
 #, php-format
 msgid "College / University"
-msgstr ""
+msgstr "大学"
 
 #: ../code/application/views/helpfile/pofields.php:617
-#, fuzzy, php-format
+#, php-format
 msgid "Business trip"
-msgstr "ビジネスツアー"
+msgstr "出張"
 
 #: ../code/application/views/helpfile/pofields.php:618
 #, php-format
 msgid "Stag/Hen/Bachelor party"
-msgstr ""
+msgstr "バチェラー・パーティ"
 
 #: ../code/application/views/helpfile/pofields.php:619
-#, fuzzy, php-format
+#, php-format
 msgid "Sports group"
-msgstr "スポーツ団体"
+msgstr "スポーツグループ"
 
 #: ../code/application/views/helpfile/pofields.php:620
 #, php-format
 msgid "Cultural group"
-msgstr ""
+msgstr "カルチャーグループ"
 
 #: ../code/application/views/helpfile/pofields.php:621
 #, php-format
 msgid "Please specify a type of group."
-msgstr ""
+msgstr "お客様グループのタイプを入力してください。"
 
 #: ../code/application/views/helpfile/pofields.php:622
-#, fuzzy, php-format
+#, php-format
 msgid "Please specify an age range for your group."
-msgstr "お客様のために素晴らしいオファーをご用意しました。"
+msgstr "お客様グループの年齢層を入力してください。"
 
 #: ../code/application/views/helpfile/pofields.php:623
 #, php-format
@@ -6982,200 +6981,200 @@ msgid "Map"
 msgstr "地図"
 
 #: ../code/application/views/helpfile/pofields.php:625
-#, fuzzy, php-format
+#, php-format
 msgid "Reviews"
-msgstr "レビュー"
+msgstr "口コミ"
 
 #: ../code/application/views/helpfile/pofields.php:626
 #, php-format
 msgid "Compare"
-msgstr ""
+msgstr "比較"
 
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid " of "
-msgstr ""
+msgstr "～の"
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
 msgid "Please see selected properties to compare on top of the page."
-msgstr ""
+msgstr "ページ上部を比較するために選択された範囲をご覧ください。"
 
 #: ../code/application/views/helpfile/pofields.php:631
-#, fuzzy, php-format
+#, php-format
 msgid "Not available"
-msgstr "利用可能の寮はありません"
+msgstr "ご利用不可"
 
 #: ../code/application/views/helpfile/pofields.php:633
-#, fuzzy, php-format
+#, php-format
 msgid "Print"
-msgstr "今すぐ印刷"
+msgstr "プリント"
 
 #: ../code/application/views/helpfile/pofields.php:634
 #, php-format
 msgid "Quick Compare"
-msgstr ""
+msgstr "簡単比較"
 
 #: ../code/application/views/helpfile/pofields.php:635
-#, fuzzy, php-format
+#, php-format
 msgid "Dorms From"
-msgstr "%sから寮 "
+msgstr "～からのドーム"
 
 #: ../code/application/views/helpfile/pofields.php:636
-#, fuzzy, php-format
+#, php-format
 msgid "Privates From"
-msgstr "プライベートルーム"
+msgstr "～からのアパート"
 
 #: ../code/application/views/helpfile/pofields.php:637
-#, fuzzy, php-format
+#, php-format
 msgid "Rating Overall"
-msgstr "全体"
+msgstr "全体評価"
 
 #: ../code/application/views/helpfile/pofields.php:640
 #, php-format
 msgid "Site"
-msgstr ""
+msgstr "敷地"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Services"
-msgstr ""
+msgstr "サービス"
 
 #: ../code/application/views/helpfile/pofields.php:646
 #, php-format
 msgid "Result"
-msgstr ""
+msgstr "結果"
 
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Only 5 properties can be compared"
-msgstr ""
+msgstr "5件のみ比較できます。"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
 msgid "Please remove a property from list."
-msgstr ""
+msgstr "リストから施設を外してください。"
 
 #: ../code/application/views/helpfile/pofields.php:649
-#, fuzzy, php-format
+#, php-format
 msgid "Quick Compare (5 properties maximum)"
-msgstr "%sの全てのプロパティーと比べる"
+msgstr "簡単比較（最高5件まで）"
 
 #: ../code/application/views/helpfile/pofields.php:650
-#, fuzzy, php-format
+#, php-format
 msgid "Remove All"
-msgstr "削除"
+msgstr "全て外してください。"
 
 #: ../code/application/views/helpfile/pofields.php:651
 #, php-format
 msgid "Please see selected properties to compare on top of this page."
-msgstr ""
+msgstr "ページ上部を比較するために選択された範囲をご覧ください。"
 
 #: ../code/application/views/helpfile/pofields.php:652
 #, php-format
 msgid "%d Results"
-msgstr ""
+msgstr "結果%d件"
 
 #: ../code/application/views/helpfile/pofields.php:653
-#, fuzzy, php-format
+#, php-format
 msgid "Home"
-msgstr "ホームページ"
+msgstr "ホーム"
 
 #: ../code/application/views/helpfile/pofields.php:654
 #, php-format
 msgid "Restore Everything"
-msgstr ""
+msgstr "全て元に戻す"
 
 #: ../code/application/views/helpfile/pofields.php:656
 #, php-format
 msgid "Compare (%d out of 5)"
-msgstr ""
+msgstr "比較(5段階評価の%d)"
 
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "さらに見る"
 
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Show Less"
-msgstr ""
+msgstr "減らして表示"
 
 #: ../code/application/views/helpfile/pofields.php:660
 #, php-format
 msgid "Not enough parameters"
-msgstr ""
+msgstr "パラメーター不十分"
 
 #: ../code/application/views/helpfile/pofields.php:661
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the email"
-msgstr "地図を印刷"
+msgstr "Eメールに記入"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #, php-format
 msgid "Invalid email recipient"
-msgstr ""
+msgstr "無効なEメールアカウント"
 
 #: ../code/application/views/helpfile/pofields.php:663
 #, php-format
 msgid "Fill in the subject"
-msgstr ""
+msgstr "件名を記入"
 
 #: ../code/application/views/helpfile/pofields.php:664
 #, php-format
 msgid "Fill in the message"
-msgstr ""
+msgstr "本文を記入"
 
 #: ../code/application/views/helpfile/pofields.php:665
 #, php-format
 msgid "Fill in the \"From\" name"
-msgstr ""
+msgstr "発信者名を記入"
 
 #: ../code/application/views/helpfile/pofields.php:666
 #, php-format
 msgid "Fill in the \"From\" email"
-msgstr ""
+msgstr "発信者Eメールを記入"
 
 #: ../code/application/views/helpfile/pofields.php:667
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid \"From\" email"
-msgstr "無効なフォーマット"
+msgstr "無効な発信者Eメール"
 
 #: ../code/application/views/helpfile/pofields.php:668
-#, fuzzy, php-format
+#, php-format
 msgid "Your message has been sent to %s"
-msgstr "メールがあなたのアドレスに送信されました"
+msgstr "あなたのメッセージは%sに送信されました。"
 
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "から"
 
 #: ../code/application/views/helpfile/pofields.php:670
-#, fuzzy, php-format
+#, php-format
 msgid "To:"
-msgstr "合計："
+msgstr "へ"
 
 #: ../code/application/views/helpfile/pofields.php:671
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "件名"
 
 #: ../code/application/views/helpfile/pofields.php:672
-#, fuzzy, php-format
+#, php-format
 msgid "Message:"
-msgstr "メッセージ"
+msgstr "本文"
 
 #: ../code/application/views/helpfile/pofields.php:673
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "他のメッセージを送る"
 
 #: ../code/application/views/helpfile/pofields.php:675
 #, php-format
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
-msgstr ""
+msgstr "このページを他の人に転送する、またはリマインダーとしてあなたに送る。"
 
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
@@ -7185,42 +7184,42 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:677
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "件名"
 
 #: ../code/application/views/helpfile/pofields.php:679
-#, fuzzy, php-format
+#, php-format
 msgid "From (name)"
-msgstr "名前"
+msgstr "（名前)から"
 
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "(e-mail)から"
 
 #: ../code/application/views/helpfile/pofields.php:681
 #, php-format
 msgid "Yes, I want to subscribe to the newsletter."
-msgstr ""
+msgstr "はい、ニュースレターの配信を希望します。"
 
 #: ../code/application/views/helpfile/pofields.php:682
-#, fuzzy, php-format
+#, php-format
 msgid "Send email"
-msgstr "メールを送る"
+msgstr "Eメールを送る"
 
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "PDFを共有する"
 
 #: ../code/application/views/helpfile/pofields.php:685
 #, php-format
 msgid "Want to send a PDF copy of this page or quote by email?"
-msgstr ""
+msgstr "EメールでのPDFコピーもしくは見積もりを希望しますか？"
 
 #: ../code/application/views/helpfile/pofields.php:686
-#, fuzzy, php-format
+#, php-format
 msgid "Send PDF"
-msgstr "送信"
+msgstr "PDFを送信する"
 
 #: ../code/application/views/helpfile/pofields.php:688
 #, php-format
@@ -7229,6 +7228,9 @@ msgid ""
 "continuing to browse our site you are agreeing to our Cookies Policy and use "
 "of cookies technology. Find out more"
 msgstr ""
+"当サイトを快適にご覧いただくためにクッキーを使用しています。閲覧を続けていた"
+"だくことにより、当社のクッキーポリシーおよびクッキー技術の使用に同意されてい"
+"るとみなします。さらに探す"
 
 #: ../code/application/views/helpfile/pofields.php:689
 #, php-format
